[package]
name = "papi"
version = "0.3.0"
authors = ["Yeonsoo Kim <alkorang@outlook.com>", "Clemens Lutz <lutzcle@cml.li>"]
license = "Apache-2.0"

[dependencies]
error-chain = "0.12.0"
libc = "~0.2"
papi-sys = { git = "https://github.com/alkorang/papi-sys.git", version = "0.3" }
serde = "~1.0.76"
serde_derive = "~1.0.79"
toml = "~0.4.7"
